[package]
name = "uefi"
version = "0.1.0"
authors = ["sanfusu <sanfusu@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi_derive = { version = "0.1.0", git = "https://github.com/sanfusu/uefi_derive" }
guid = { version = "0.1.0", git = "https://github.com/sanfusu/guid" }

[workspace]
